--- a/apps/agent/pyproject.toml
+++ b/apps/agent/pyproject.toml
@@ -2,7 +2,6 @@
 name = "preprod-agent"
 version = "0.1.0"
 description = "Pre-Production Planning Deep Agent - Turn chaos into checklists"
-readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "langgraph>=0.2.0",
@@ -10,6 +9,8 @@ dependencies = [
     "langchain-core>=0.3.0",
     "pydantic>=2.0.0",
     "httpx>=0.27.0",
+    "fastapi>=0.100.0",
+    "uvicorn>=0.23.0",
 ]
 
 [project.optional-dependencies]
@@ -24,7 +25,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/preprod_agent"]
+packages = ["src/pmm_agent"]
 
 [tool.ruff]
 line-length = 100
