testing Vercel build with manual git add .

--- a/vercel.json
+++ b/vercel.json
@@ -13,13 +13,11 @@
       "use": "@vercel/python"
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/agent"
-    }
-  ],
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/agent"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
