Frontend renders, but still fixing backend 404 errors.

--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/agent"
+      "destination": "/api/agent/$1"
     },
     {
       "source": "/(.*)",
