--- a/apps/agent/pyproject.toml
+++ b/apps/agent/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "httpx>=0.27.0",
     "fastapi>=0.100.0",
     "uvicorn>=0.23.0",
+    "slowapi>=0.1.9",
 ]
 
 [project.optional-dependencies]
