--- a/apps/agent/pyproject.toml
+++ b/apps/agent/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi>=0.100.0",
     "uvicorn>=0.23.0",
     "slowapi>=0.1.9",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
