Now that project has revealed to be costly with Sonnet 4, moving onto the challenge phase of creating my own AI Agent domain on a new repo.

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,10 @@ apps/agent/TOOL_TESTING.md
 apps/agent/OBSERVABILITY_SETUP.md
 apps/agent/DEBUGGING_GUIDE.md
 apps/agent/LOCAL_SETUP.md
+
+# Internship application tracking
+INTERNSHIP_APPLICATION.md
+TOMORROW_GAMEPLAN.md
+
+# Error tracking analysis
+docs/ERROR_TRACKING_ANALYSIS.md
