Now that PMM-Agent is complete (not perfect but satisfactory based on my understanding), implementation documentation has been made for the cloning tomorrow of this repo and to rebuild my first custom agent! From there, I will finish the to do list of recording a Loom, documenting teaching notes, and getting somebody else to set up my project.

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ apps/agent/LOCAL_SETUP.md
 # Internship application tracking
 INTERNSHIP_APPLICATION.md
 TOMORROW_GAMEPLAN.md
+DOMAIN_CONVERSION_GAMEPLAN.md
+COPY_TO_NEW_REPO.md
 
 # Error tracking analysis
 docs/ERROR_TRACKING_ANALYSIS.md
